task_2/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: nginx-canary
        image: nginx:1.14.2    
        volumeMounts:
          - name: config-volume
            mountPath: /tmp
            readOnly: true
        command:  ["/bin/bash", "-c", "envsubst < /tmp/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80
      volumes:
        - name: config-volume
          configMap:
            name: canary-nginx-configmap
            
---
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  type: ClusterIP
  ports:
  - name: canary
    port: 8080
    targetPort: 80
  selector:
    app: canary
