task_2/ingress-canary.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-non-canary-ingress-a
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: canary-svc 
              port:
                number: 8080
  # defaultBackend:
    # service:
      # name: canary-svc 
      # port:
        # number: 8080
