task_2/ingress-non-canary.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-non-canary-ingress-b
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-svc 
            port:
              number: 8080
